--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-\emph{"Statistics ist the explanation of variance in the light of what remains
+\emph{"Statistics is the explanation of variance in the light of what remains
 unexplained."}
 
 \vspace{5 mm}
